# esp-idf-hal-ext

./: Cargo.toml  sdkconfig.defaults
examples/: sdmmc.rs
scripts/: flash.sh  test.sh
src/: lib.rs  sdmmc.rs
