[package]
name = "esp-idf-hal-ext"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-hal = "0.40.1"
esp-idf-sys = { version = "0.32.1", default-features = false, features = ["native"] }
heapless = "0.7"

[build-dependencies]
embuild = "0.31"

[dev-dependencies]
anyhow = "1.0.69"
esp-idf-sys = { version = "0.32", features = ["native", "binstart"] }
